[gd_scene load_steps=8 format=3 uid="uid://dcuvo7vh2y3mf"]

[ext_resource type="Theme" uid="uid://ko3yss3vplfp" path="res://assets/fonts/text_theme.tres" id="1_glv2v"]
[ext_resource type="Script" uid="uid://c3jjve1ate7ix" path="res://Main.gd" id="1_r0du0"]
[ext_resource type="Texture2D" uid="uid://5kpa78jvx7ln" path="res://assets/images/001.png" id="1_uu6xs"]
[ext_resource type="FontFile" uid="uid://qwubym2nckit" path="res://assets/fonts/mplus-1c-regular.ttf" id="4_cm0pq"]
[ext_resource type="Texture2D" uid="uid://q8l5hh8x8r3w" path="res://assets/images/window.png" id="5_fos0i"]

[sub_resource type="LabelSettings" id="LabelSettings_fos0i"]
font = ExtResource("4_cm0pq")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_3dxm6"]
font = ExtResource("4_cm0pq")
font_size = 54

[node name="Main" type="Node2D"]
script = ExtResource("1_r0du0")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(0, -80)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_uu6xs")
centered = false
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="bg"]
offset_right = 1461.3334
offset_bottom = 810.6667
color = Color(0, 0, 0, 0.62352943)
metadata/_edit_lock_ = true

[node name="TextBody" type="RichTextLabel" parent="."]
offset_left = 120.0
offset_top = 152.0
offset_right = 1784.0
offset_bottom = 960.0
theme = ExtResource("1_glv2v")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "　港町クロサキ――1980年代から90年代に移りゆく時代を背負った架空の都市。この町には高度経済成長の残り香とバブル崩壊前夜の不安が同居し、華やかな表の顔の裏に腐臭を漂わせている。夜になれば繁華街のネオンが雨に濡れた舗道を照らし、港には錆びた倉庫群が不気味な影を落とす。闇に沈む路地裏では裏社会の亡霊たちが息を潜め、誰もが見て見ぬふりを決め込む腐敗が巣食っていた。

　雨に煙る街角を一本入った先、古びたアパートの二階に「城崎探偵事務所」の看板が掛かっている。薄汚れた階段を上った先の扉には、人の出入りが少ないせいか埃が積もり、ノブの金属は手垢で曇っていた。午後の薄日がくすんだカーテン越しに差し込む事務所の一室では、城崎遼（しろさき りょう）が机にもたれ、煙草の煙を燻らせていた。ここ一ヶ月依頼は一つもなく、古新聞を読むことと煙草を吸うこと以外にやることもない。灰皿には山のように吸い殻が溜まり、空気はヤニと倦怠でどんよりとしている。

　その沈黙を破るように、バタンッと扉が乱暴に開け放たれた。部屋の埃がわずかに舞い上がり、城崎は細めた目をそちらに向ける。扉のところには、水原明日香（みずはら あすか）が立っていた。まだ二十代半ばの彼女は新聞記者で、この街の裏事情を追いかけている。同業者といえば同業者だが、れっきとした新聞社勤めである。ショートボブの髪から水滴が落ちるのは、先ほどまで降っていた雨のせいか。水原は薄く笑いながら靴を脱ぎ、ずかずかと部屋に上がりこんできた。

「……やっぱりいた。どうせ暇してると思ったんだ」水原が開口一番に言い放つ。

「……ノックぐらいしろ。客でもないのに」城崎は煙草を指先にはさんだまま、不機嫌そうに答えた。

「だって客なんか来ないじゃない。もう一ヶ月だっけ？ 無収入の記録更新中？」水原はクスクスと笑いながら煙の漂う部屋を見渡す。

「……記者が探偵の稼ぎを心配してどうする」城崎は肩をすくめ、灰皿に灰を落とした。

「ネタに困ってる同業者を冷やかしに来ただけ。……それに、あんたのところに顔を出すと街の裏事情が拾えるんだよ」水原は城崎の机に近づき、山積みになった新聞に手を伸ばす。その目は冗談めかしているが、その裏にはこの街の闇に対する強い好奇心が見え隠れする。

　城崎は煙草を口元から離し、細い目で水原を見た。「俺を取材対象にする気か。記事になんてならんぞ、落ちぶれた元刑事なんざ」

「でも、あんたが昔やらかした事件の噂、まだ警察の間に残ってるんだよね」水原は古びた新聞をペラリとめくりながら言う。「“腐った警察の内部告発”、とか“裏社会に睨まれてる”とか…正直、そういうの好きなんだ」

「……物好きな記者だ」城崎は小さく鼻で笑う。彼が警察を辞めた理由――それを水原は薄々知っているのだろう。城崎遼は元刑事だ。かつて警察組織の不正を暴こうとして上層部に睨まれ、この街の警察から追われるように去った過去を持つ。裏社会からも目を付けられている、厄介な元刑事。それが今の自分だ、と城崎は思う。そんな過去に興味津々な記者が一人、こうして居座っている。

　水原は机の上の新聞の一部を拾い上げた。「へえ、まだ紙の新聞読んでるんだ？ ネットじゃなくて」と軽い調子で言う。

　城崎は無造作に煙草を灰皿に押しつけもみ消した。「活字には時間の重みがある。お前みたいに走り回るやつには分からんだろうがな」

「……なにそれ、カッコつけてるつもり？」水原が呆れたように眉を上げる。

「……皮肉のつもりだ」城崎は静かに答えた。

　二人の間にしばし言葉が途切れ、部屋には時計の音と外の通りから聞こえるかすかな物音だけが満ちた。遠くでカラスが一声、哀しげに鳴いた。水原が来ても空気の重さはさほど変わらない。しかし城崎にとって、この若い記者の存在は嫌いではなかった。何だかんだと言いながらも、情報交換をしたり時折手を貸し合ったりする奇妙な間柄だ。

　その沈黙を破ったのは、控えめなノックの音だった。コン、と扉が叩かれ、水原と城崎は思わず顔を見合わせる。

「ほらな……珍しい。お前の冷やかし以外で客が来るなんて」城崎が立ち上がり、扉の方に目を向けてぼそりと言う。

「お、仕事の予感？ よかったじゃん。家賃払えるかもね」水原がにやりとする。

　城崎は軽く肩をすくめ、扉へ歩いて行った。錆びついたノブを回し扉を引くと、廊下に一人の女性が立っていた。黒い布地のワンピースに身を包み、まるで喪服のような出で立ちだ。三十歳前後だろうか、落ち着いた物腰でそっと会釈する。

「……城崎探偵事務所でよろしいでしょうか」女は静かな声で尋ねた。控えめな声音だが、その瞳には何か決意の色が浮かんでいる。

「ああ。椅子なら空いてる。……コーヒーは出せんが」城崎は無愛想に頷き、中へ招き入れる。飲み物を出す余裕など、この事務所にはなかった。

「結構です」女は静かに首を振り、勧められた椅子に腰掛けた。「……実は、亡き夫の件でお願いしたいことがありまして」

　城崎が口を開く前に、横から水原が小声で囁いた。「（未亡人の依頼……典型的だね）」ニヤニヤと面白がるような口調だ。確かにハードボイルドな物語にはお約束の展開かもしれない。黒い服の未亡人が持ち込む事件――城崎は心の中で苦笑した。

「黙ってろ」城崎は水原にだけ聞こえるよう低く叱りつけ、改めて女性に向き直った。

「まずお話を伺いましょう」城崎はできるだけ丁寧に言った。依頼人の第一印象から、用件の重さを感じ取っていた。単なる浮気調査や人探しではなさそうだ。

　女性は小さく頷くと、持っていたバッグから一枚の写真を取り出して机に置いた。写真にはスーツ姿で穏やかに笑う男性が写っている。「夫は、先月“事故死”とされました。けれど……どうしても納得できないのです」

　城崎は写真に目を落とした。見るからに生真面目そうな男だ。彼女の夫、つまり故人の写真だろう。「事故死……と警察が片付けたわけか」城崎が確認するように尋ねると、彼女は静かに「はい」と頷いた。

「……けれど彼は港湾運送会社の役員で、不正を知っていたかもしれません。……それで、殺されたのではないかと」女性――黒川美沙子（くろかわ みさこ）は声を落とし、震えるように言葉を続ける。

　その名前に、水原が思わず声をあげた。「黒川浩二の未亡人……黒川運送の副社長……じゃないの！」写真の男性に見覚えがあったのだ。城崎も写真と彼女の顔を見比べ、思い当たる。この港町では名の知れた運送会社が黒川運送だ。夫の黒川浩二氏はその副社長、つまり企業幹部だったということになる。

「ええ」美沙子はうなずいた。「……夫は裏の世界に深入りしてしまったのかもしれません」彼女の声はか細いが、その内容はこの依頼の異質さを物語っていた。街の有力企業の副社長が事故死――だが妻は他殺を疑っている。背後に裏社会の影。城崎の胸の内に、一筋の緊張感が走った。

　一瞬の静寂が訪れる。灰皿にたまった煙草の灰がポトリと落ちる音が妙に大きく響いた。城崎は煙草を一本取り出し、マッチで火を点けた。白く細い煙が天井へ昇っていく。「……名前を」城崎は煙の向こうから短く尋ねた。

「黒川浩二。夫です」美沙子が答える。

　それを聞いて、水原はハッと息をのんだ様子だった。すでに彼女は夫の名前に思い当たっている。「黒川運送の副社長……」と先程口にしていた通りだ。

　城崎は表情を変えないまま、ひとつ頷いた。頭の中で、港町クロサキに渦巻く噂と事件の像が組み上がっていく気がする。黒川浩二、副社長。不正を知って殺された可能性。裏社会。そして未亡人の依頼。

「……いいだろう。受けよう」城崎はゆっくりと言った。「報酬は相場でいい」

「ありがとうございます……」美沙子は安堵したようにかすかに息を吐いた。その瞳には涙が浮かんでいる。彼女が取り出したハンカチで目元を押さえる指先は細く震えていた。

　横で水原が小さく口笛を吹く。「やっぱり始まったね」彼女がくすっと笑って城崎を見る。「ほら、退屈しのぎには最高でしょ？」

「……口を慎め、水原。これは遊びじゃない」城崎は鋭く言い放った。水原は肩をすくめて舌を出す。だが彼女の瞳もまた興奮に輝いていた。

　美沙子は涙を拭い終え、スッと立ち上がった。「探偵さん、本当にありがとうございます……」深く頭を下げる。

「詳細を整理したい。後日改めてお話を伺います」城崎は依頼人の動揺を気遣い、それだけ伝えた。

「はい……よろしくお願いします」美沙子は静かに一礼すると、足早に事務所を辞去した。後ろ姿は弱々しくも気品があり、悲劇に耐える未亡人の雰囲気をまとっている。城崎は扉が閉まる音を聞きながら、机の上の夫の写真に視線を落とした。

　部屋には再び静寂が戻ったが、先ほどまでの退屈な静けさとは明らかに異なっていた。港町クロサキの暗い海に、小石が投げ込まれたようなさざ波が広がり始めている――城崎にはそんな予感があった。"
fit_content = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = 1800.0
offset_top = 192.0
offset_right = 1929.0
offset_bottom = 260.0
text = "100%"
label_settings = SubResource("LabelSettings_fos0i")

[node name="Window" type="Sprite2D" parent="."]
position = Vector2(960, 107.99997)
scale = Vector2(1, 0.20000002)
texture = ExtResource("5_fos0i")
flip_v = true
metadata/_edit_lock_ = true

[node name="ChapterIdx" type="OptionButton" parent="."]
offset_left = 1776.0
offset_top = 112.0
offset_right = 1836.0
offset_bottom = 132.0
scale = Vector2(2, 2)

[node name="Chapter" type="Label" parent="."]
offset_left = 88.0
offset_top = 24.0
offset_right = 496.0
offset_bottom = 90.99997
text = "第一章"
label_settings = SubResource("LabelSettings_3dxm6")

[connection signal="item_selected" from="ChapterIdx" to="." method="_on_chapter_idx_item_selected"]
